Archive2/2f/858011fbcfea59/output
main.cpp:25:27: error: invalid operands to binary expression ('int' and 'Data')
        for (int i = 0; i < m_someData; ++i) {
                        ~ ^ ~~~~~~~~~~
1 error generated.
